--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -183,6 +183,15 @@
               border: 1px solid #ccc;
               font-size: 14px;
             }
+
+            .alert-fixed {
+                position:absolute; 
+                top: 60px; 
+                left: 0px; 
+                width: 100%;
+                z-index:9999; 
+                border-radius:0px
+            }
     </style>
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">  
