--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,199 +6,13 @@
     <meta name="theme-color" content="#000000">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Hitchhike a car!</title>
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .btn-secondary,
-      .btn-secondary:hover,
-      .btn-secondary:focus {
-        color: #333;
-        text-shadow: none; /* Prevent inheritance from `body` */
-      }
-
-      body {
-        text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-        box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-      }
-
-      .cover-container {
-        max-width: 42em;
-      }
-      .nav-masthead .nav-link {
-        padding: .25rem 0;
-        font-weight: 700;
-        color: rgba(255, 255, 255, .5);
-        background-color: transparent;
-        border-bottom: .25rem solid transparent;
-      }
-
-      .nav-masthead .nav-link:hover,
-      .nav-masthead .nav-link:focus {
-        border-bottom-color: rgba(255, 255, 255, .25);
-      }
-
-      .nav-masthead .nav-link + .nav-link {
-        margin-left: 1rem;
-      }
-
-      .nav-masthead .active {
-        color: #fff;
-        border-bottom-color: #fff;
-      }
-
-      .form-signin {
-            width: 100%;
-            max-width: 330px;
-            padding: 15px;
-            margin: auto;
-            }
-
-            .form-signin .checkbox {
-            font-weight: 400;
-            }
-
-            .form-signin .form-floating:focus-within {
-            z-index: 2;
-            }
-
-            .form-signin input[type="email"] {
-            margin-bottom: -1px;
-            border-bottom-right-radius: 0;
-            border-bottom-left-radius: 0;
-            background-color: #333;
-            }
-
-            .form-signin input[type="password"] {
-            margin-bottom: 10px;
-            border-top-left-radius: 0;
-            border-top-right-radius: 0;
-            background-color: #333;
-            }
-
-            @import url("https://fonts.googleapis.com/css?family=Roboto");
-            @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
-            
-            .owl {
-              margin: auto;
-              width: 211px;
-              height: 108px;
-              background-image: url("https://dash.readme.io/img/owl-login.png");
-              position: relative;
-            }
-            .owl .hand {
-              width: 34px;
-              height: 34px;
-              border-radius: 40px;
-              background-color: #472d20;
-              transform: scaleY(0.6);
-              position: absolute;
-              left: 14px;
-              bottom: -8px;
-              transition: 0.3s ease-out;
-            }
-            .owl .hand.password {
-              transform: translateX(42px) translateY(-15px) scale(0.7);
-            }
-            .owl .hand.hand-r {
-              left: 170px;
-            }
-            .owl .hand.hand-r.password {
-              transform: translateX(-42px) translateY(-15px) scale(0.7);
-            }
-            .owl .arms {
-              position: absolute;
-              top: 58px;
-              height: 41px;
-              width: 100%;
-              overflow: hidden;
-            }
-            .owl .arms .arm {
-              width: 40px;
-              height: 65px;
-              background-image: url("https://dash.readme.io/img/owl-login-arm.png");
-              position: absolute;
-              left: 20px;
-              top: 40px;
-              transition: 0.3s ease-out;
-            }
-            .owl .arms .arm.password {
-              transform: translateX(40px) translateY(-40px);
-            }
-            .owl .arms .arm.arm-r {
-              left: 158px;
-              transform: scaleX(-1);
-            }
-            .owl .arms .arm.arm-r.password {
-              transform: translateX(-40px) translateY(-40px) scaleX(-1);
-            }
-            .form {
-              margin: auto;
-              margin-top: -9px;
-              padding: 30px;
-              
-              width: 175px;
-            }
-            .form .control {
-              margin-bottom: 10px;
-              position: relative;
-            }
-            .form .control label {
-              position: absolute;
-              font-size: 16px;
-              top: 11px;
-              left: 9px;
-              color: rgba(0,0,0,0.3);
-            }
-            .form .control input {
-              padding: 9px 6px 9px 30px;
-              border-radius: 4px;
-              border: 1px solid #ccc;
-              font-size: 14px;
-            }
-
-            .alert-fixed {
-                position:absolute; 
-                top: 60px; 
-                left: 0px; 
-                width: 100%;
-                z-index:9999; 
-                border-radius:0px
-            }
-    </style>
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">  
     <div id="root" class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"> 
-      <footer class="mt-auto text-white-50">
-        <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
-      </footer>
     </div>
   </body>  
 </html>
